[package]
name = "Bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"
humantime = "2.1"
sqlx = { version = "0.8.6" , features = ["sqlite", "runtime-tokio-rustls", "macros"] }
dotenv = "0.15.0"
poise = "0.6.1"
regex = "1.12.2"
thiserror = "2.0.18"
rand = "0.9.2"
