[package]
name = "Bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
poise = "0.6.1"
regex = "1.12.2"
thiserror = "2.0.18"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
